--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,10 +30,13 @@ nav img {
     order: -1; /* Coloca la imagen al principio del flex */
 }
 nav ul {
+    height: 100%; /* Altura completa del navbar */
+    background-color: var(--background-color); /* Color de fondo del navbar */
     list-style: none; /* Elimina los puntos de la lista */
     padding: 0; /* Elimina el padding por defecto */
     margin: 0; /* Elimina el margen por defecto */
     display: flex; /* Muestra los elementos en línea */
+    align-items: center; /* Centra verticalmente los elementos */
 
 }
 nav li {
