--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,11 @@
     --text-color:#F4EDEA ;
     --background-color: #1b1f3b;
 }
+*{
+    box-sizing: border-box; /* Asegura que el padding y el borde no afecten el tamaño total del elemento */
+    margin: 0; /* Elimina el margen por defecto */
+    padding: 0; /* Elimina el padding por defecto */
+}
 body
 {
     background-color: var(--background-color);
