--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ nav {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: auto;
+    width: 100%;
     height: 60px;
     position: relative;
 }
