--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@ body
 {
     background-color: var(--background-color);
     display: block;
+    color: var(--text-color); /* Color de texto */
 }
 body *
 {
@@ -59,6 +60,8 @@ body *
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
+    min-width: 500px; /* Ancho mínimo de 300px */
+    max-width: 800px; /* Ancho máximo de 500px */
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* fondo oscuro */
     display: flex;
@@ -71,7 +74,8 @@ body *
 }
 
 .modal-content {
-    background-color: white;
+    background-color: var(--background-color);
+    color: var(--text-color);
     padding: 2rem;
     border-radius: 10px;
     width: 90%;
